# zeroshot_topics

./: .coveragerc  .gitignore  LICENSE-APACHE  LICENSE-MIT  README.rst  pyproject.toml  requirements.txt  setup.py
notebook/: usage.ipynb
zeroshot_topics/: __init__.py  utils.py  zeroshot_tm.py
